Adding redwood tree

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title></title>
 </head>
 <body>
-
+<h4>Redwood Tree!!</h4>
+<p><i>A little friend with a redwood tree.</i></p>
+<img src="http://images.hdwpics.com/2285BDA8108B/Meerkat.jpg">
 </body>
 </html>
